# tensor-coin

./: CMakeLists.txt  README.md
src/blockchain/: auth_wallet.cpp  auth_wallet.hpp  block.cpp  block.hpp  chain.cpp  chain.hpp
src/hash/: cpuhash.cpp  cpuhash.hpp  cudahash.cpp  cudahash.hpp  cudamultiply.cu  cudamultiply.cuh  parallel_sample.cu  parallel_sample.cuh  runtime_detection.cpp  runtime_detection.cu  runtime_detection.cuh  runtime_detection.hpp  uhash.cpp  uhash.hpp
test/: main.cpp  tests.cpp  tests.hpp
